--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,13 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" integrity="sha384-/frq1SRXYH/bSyou/HUp/hib7RVN1TawQYja658FEOodR/FQBKVqT9Ol+Oz3Olq5" crossorigin="anonymous">
+  <!-- Add the base CSS plus Solid + Brands styles -->
+  <link href="/your_path_to_version_6_files/css/fontawesome.css" rel="stylesheet">
+  <link href="/your_path_to_version_6_files/css/brands.css" rel="stylesheet">
+  <link href="/your_path_to_version_6_files/css/solid.css" rel="stylesheet">
+  <!-- update existing v5 CSS to use v6 icons and assets -->
+  <link href="/your-path-to-fontawesome/css/v5-font-face.css" rel="stylesheet" />
 </head>
 <body>
   <app-root></app-root>
